--- a/NewApp/app/src/main/res/values/strings.xml
+++ b/NewApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">NewApp</string>
     <string name="no_internet_connection">No internet connection.</string>
-    <string name="no_news">No news found.</string>
+    <string name="no_news"> No News updates available, please reload the app or check after some time.</string>
 </resources>
