--- a/NewApp/app/src/main/res/values/strings.xml
+++ b/NewApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,23 @@
     <string name="app_name">NewApp</string>
     <string name="no_internet_connection">No internet connection.</string>
     <string name="no_news"> No News updates available, please reload the app or check after some time.</string>
+    <string name="settings_menu_item">Settings</string>
+    <string name="settings_title">News Settings</string>
+
+    <string name="settings_from_date_label">From date</string>
+    <string name="settings_from_date_key" translatable="false">from_date</string>
+    <string name="settings_from_date_default" translatable="false">2000.01.01</string>
+
+
+    <string name="settings_order_by_label">Order By</string>
+    <string name="settings_order_by_key" translatable="false">order_by</string>
+    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance</string>
+
+    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
+    <string name="settings_order_by_relevance_label">Relevance</string>
+    <string name="settings_order_by_relevance" translatable="false">relevance</string>
+
+    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
+    <string name="settings_order_by_newest_label">Newest</string>
+    <string name="settings_order_by_newest" translatable="false">newest</string>
 </resources>
